[gd_scene load_steps=29 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://PlayerBullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://images/Player/purple-f-32x32-sprite-png/tile024.png" type="Texture" id=3]
[ext_resource path="res://images/Player/purple-f-32x32-sprite-png/tile025.png" type="Texture" id=4]
[ext_resource path="res://images/Player/purple-f-32x32-sprite-png/tile026.png" type="Texture" id=5]
[ext_resource path="res://images/Player/purple-f-32x32-sprite-png/tile012.png" type="Texture" id=6]
[ext_resource path="res://images/Player/purple-f-32x32-sprite-png/tile013.png" type="Texture" id=7]
[ext_resource path="res://images/Player/purple-f-32x32-sprite-png/tile014.png" type="Texture" id=8]
[ext_resource path="res://images/Player/purple-f-32x32-sprite-png/tile036.png" type="Texture" id=9]
[ext_resource path="res://images/Player/purple-f-32x32-sprite-png/tile037.png" type="Texture" id=10]
[ext_resource path="res://images/Player/purple-f-32x32-sprite-png/tile038.png" type="Texture" id=11]
[ext_resource path="res://images/Player/purple-f-32x32-sprite-png/tile015.png" type="Texture" id=12]
[ext_resource path="res://images/Player/purple-f-32x32-sprite-png/tile016.png" type="Texture" id=13]
[ext_resource path="res://images/Player/purple-f-32x32-sprite-png/tile017.png" type="Texture" id=14]
[ext_resource path="res://images/Player/purple-f-32x32-sprite-png/tile027.png" type="Texture" id=15]
[ext_resource path="res://images/Player/purple-f-32x32-sprite-png/tile028.png" type="Texture" id=16]
[ext_resource path="res://images/Player/purple-f-32x32-sprite-png/tile029.png" type="Texture" id=17]
[ext_resource path="res://images/Player/purple-f-32x32-sprite-png/tile000.png" type="Texture" id=18]
[ext_resource path="res://images/Player/purple-f-32x32-sprite-png/tile001.png" type="Texture" id=19]
[ext_resource path="res://images/Player/purple-f-32x32-sprite-png/tile002.png" type="Texture" id=20]
[ext_resource path="res://images/Player/purple-f-32x32-sprite-png/tile039.png" type="Texture" id=21]
[ext_resource path="res://images/Player/purple-f-32x32-sprite-png/tile040.png" type="Texture" id=22]
[ext_resource path="res://images/Player/purple-f-32x32-sprite-png/tile041.png" type="Texture" id=23]
[ext_resource path="res://images/Player/purple-f-32x32-sprite-png/tile003.png" type="Texture" id=24]
[ext_resource path="res://images/Player/purple-f-32x32-sprite-png/tile004.png" type="Texture" id=25]
[ext_resource path="res://images/Player/purple-f-32x32-sprite-png/tile005.png" type="Texture" id=26]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "down-left",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "down-right",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "up-right",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "up-left",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 10.0
height = 17.3156

[node name="Player" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Pause", "Transform" ]
speed = 300
Bullet = ExtResource( 2 )
bullet_cooldown = 0.4

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "right"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 2 )

[node name="BulletSpawnPoint" type="Position2D" parent="." index="2"]

[node name="BulletTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]


